--- a/static/css/clean-blog.css
+++ b/static/css/clean-blog.css
@@ -460,6 +460,8 @@ footer .copyright {
 }
 
 .btn {
+  margin-top:20px;
+  margin-bottom:20px;
   font-size: 14px;
   font-weight: 800;
   padding: 15px 25px;
