Change make post img name, delete useles '' in header link to the img

--- a/templates/make-post.html
+++ b/templates/make-post.html
@@ -4,7 +4,7 @@
 {% block content %}
 {% include "header.html" %}
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/aaron-burden-y02jEX_B0O0-unsplash.jpg')}}')">
+  <header class="masthead" style="background-image: url({{ url_for('static', filename='img/5.jpg')}})">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
